--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ div.Section1
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal>https://vldb.org/cidrdb/2025</p></td>	
+  <p class=MsoNormal><a href="https://vldb.org/cidrdb/2025/">2025 Proceedings Website</a></p></td>	 
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
