--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ div.Section1
   has been held every other January for the first 18 years. Since 2020, the conference has a
   yearly cadence alternating between California and Amsterdam.
   <span style="mso-spacerun:
-  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a fifteenth time
-  between January 19-22, 2025 in Amsterdam, the Netherlands. </b> </p>
+  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a sixteenth time
+  between January 18-21, 2026 in Chaminade, USA. </b> </p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
@@ -200,6 +200,28 @@ div.Section1
   <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
   border-left:none;mso-border-left-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal><b>Website<o:p></o:p></b></p>
+  </td>
+ </tr>
+<tr>
+  <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
+  border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>2026</p>
+  </td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>Not available yet</p></td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>Not available yet</p></td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal><a href="cidr2026/index.html">2026 website</a></p>
   </td>
  </tr>
 <tr>
