--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@ div.Section1
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal>Not available yet</p></td>
+  <p class=MsoNormal><a href="https://vldb.org/cidrdb/2026/">2026 Proceedings Website</a></p></td>	 
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal>Not available yet</p></td>
+  <p class=MsoNormal><a href="cidr2026/cidr2026proceedings.zip">2026 Proceedings (.zip)</a></p></td>
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
@@ -238,7 +238,7 @@ div.Section1
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal>Not available yet</p></td>
+  <p class=MsoNormal><a href="cidr2025/cidr2025proceedings.zip">2025 Proceedings (.zip)</a></p></td>
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
